<resources>
    <string name="app_name">We Care</string>

    <string name="welcome">WELCOME</string>
    <string name="refresh">refresh</string>
    <string name="new_claim">New Claim</string>
    <string name="submit_evidence">submit evidence</string>
    <string name="title_activity_test">test</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="language">Language</string>
    <string name="topic">Topic</string>
    <string name="new_claim_button">New Claim</string>
    <string name="settings">Settings</string>
    <string name="nextButton">next</string>
    <string name="txt_name">Name</string>
    <string name="txt_NIC">NIC</string>
    <string name="txt_drivingLicenseNo">Driving License No</string>
    <string name="txt_expirationDate">Expiration Date</string>
    <string name="txt_address">Address</string>
    <string name="txt_contactNo">Contact Number</string>
    <string name="txt_driverDetails">Driver Details</string>
    <string name="txt_accidentDetails">Accident Details</string>
    <string name="txt_roadStatusQuestion">State of road / road surface</string>
    <string name="txt_smooth">Smooth</string>
    <string name="txt_rough">"Rough "</string>
    <string name="txt_dry">Dry</string>
    <string name="txt_wet">Wet</string>
    <string name="txt_uphill">Uphill</string>
    <string name="txt_downhill">Downhill</string>
    <string name="txt_flat">Flat</string>
    <string name="txt_visibilityQuestion">How was visibility?</string>
    <string name="txt_good">Good</string>
    <string name="txt_moderate">Moderate</string>
    <string name="txt_poor">Poor</string>
    <string name="txt_damagedArea">Select the vehicle damaged area</string>
    <string name="txt_damagedAreaView">Select the vehicle damaged area</string>
    <string name="txt_repairerDetails">Repairer Details</string>
    <string name="txt_companyName">Company Name</string>
    <string name="txt_location">Location</string>
    <string name="txt_vehicles">Vehicles No</string>
    <string name="is_other_property_damaged_title">Is other property damaged?</string>
    <string name="isItAVehicle">Is the property vehicle?</string>
    <string name="RadioYes">Yes</string>
    <string name="RadioNo">No</string>
    <string name="vehicle_registration_number_title">Vehicle Registration Number</string>
    <string name="driver_name_title">Driver Name</string>
    <string name="driver_contact_number_title">Driver Contact Number</string>
    <string name="vehicle_damaged_regions_title">Vehicle Damaged Regions</string>
    <string name="third_party_bank_account_details_title">Bank Account Details</string>
    <string name="account_number_title">Account Number</string>
    <string name="bank_name_title">Bank Name</string>
    <string name="branch_name_title">Branch Name</string>
    <string name="other_property_damage_details_title">Other Property Damage Details</string>
    <string name="other_damaged_vehicle_details_title">Vehicle Details</string>
    <string name="other_damaged_property_details_title">Property Details</string>
    <string name="otherDamagedPropertyDescription">Description</string>
    <string name="brief_description">Brief Description</string>
    <string name="is_another_vehicle_damaged">Is another vehicle damaged?</string>
    <string name="property_damaged_party_account_details">Bank Account details</string>
    <string name="property_damage_evidence">Property Damage Evidence</string>
    <string name="vehicle_damage_evidence">Vehicle Damage Evidence</string>
    <string name="password">Password</string>
    <string name="txt_nicNumber">NIC Number</string>
    <string name="btn_login">Login</string>
    <string name="own_vehicle_damage_evidence"> </string>
    <string name="txt_finalizing_claim">Finalizing Claim</string>
    <string name="txt_claimVerification">I hereby verify that the details in this form are correct.</string>
    <string name="txt_submitClaim">Submit Claim</string>
    <string name="txt_submittingClaim">Submitting Claim</string>
    <string name="txt_PleaseWait">Please Wait...</string>
    <string name="txt_model">Model</string>
    <string name="txt_basicDetails">Basic Details : </string>
    <string name="txt_Claims">Claims : </string>
    <string name="logout">logout</string>
    <string name="txt_Submit">Resubmit</string>
    <string name="vehicles">Vehicles</string>

    <string name="yearTxt">Year</string>
    <string name="insurance_type">Insurance type</string>
    <string name="insurance_date">Insured date</string>
</resources>